--- a/webroot/index.html
+++ b/webroot/index.html
@@ -1,22 +1,10 @@
 ---
+title: Furusho Home
 layout: default
 ---
 <!--[if lt IE 8]>
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
-
-<div class="header-container">
-  <header class="wrapper clearfix">
-    <h1 class="title">Furusho</h1>
-    <nav>
-      <ul>
-        <li><a href="#">nav ul li a</a></li>
-        <li><a href="#">nav ul li a</a></li>
-        <li><a href="#">nav ul li a</a></li>
-      </ul>
-    </nav>
-  </header>
-</div>
 
 <div class="main-container">
   <div class="main wrapper clearfix">
@@ -47,24 +35,3 @@ layout: default
 
   </div> <!-- #main -->
 </div> <!-- #main-container -->
-
-<div class="footer-container">
-  <footer class="wrapper">
-    <h3>footer</h3>
-  </footer>
-</div>
-
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-
-<script src="js/main.js"></script>
-
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-<script>
-  (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-          function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-    e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-    e.src='//www.google-analytics.com/analytics.js';
-    r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-  ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-</script>
