add title for Furusho

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -1,5 +1,5 @@
 ---
-title: Furusho Home
+title: Pediatric Dentistry Chicago, Pediatric Dentist, Teeth Braces, Orthodontics - Home
 layout: default
 ---
 <!--[if lt IE 8]>
