add dynamic nav menu and one more page

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -1,6 +1,11 @@
 ---
-title: Pediatric Dentistry Chicago, Pediatric Dentist, Teeth Braces, Orthodontics - Home
+title: Home
 layout: default
+meta:
+  title: Pediatric Dentistry Chicago, Pediatric Dentist, Teeth Braces, Orthodontics - Home
+link:
+  text: Home
+  url: index.html
 ---
 <!--[if lt IE 8]>
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
