add contact short and full organisms

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -12,6 +12,17 @@ link:
 <![endif]-->
 
 <div class="main-container">
+
+  <br>
+  <hr>
+  <br>
+  {% include organisms/contact-full.html %}
+  <br>
+  <hr>
+  <br>
+  {% include organisms/contact-short.html %}
+
+
   <div class="main wrapper clearfix">
 
     <article>
