add correct pages, initial nav menu

--- a/webroot/contact.html
+++ b/webroot/contact.html
@@ -1,8 +1,9 @@
 ---
+title: Contact
 layout: default
 link:
-    text: Page 3
-    url: page-3.html
+    text: Contact
+    url: contact.html
 ---
 <!--[if lt IE 8]>
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
