--- a/webroot/services.html
+++ b/webroot/services.html
@@ -1,8 +1,9 @@
 ---
+title: Services
 layout: default
 link:
-    text: Page 2
-    url: page-2.html
+    text: Services
+    url: services.html
 ---
 <!--[if lt IE 8]>
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
