--- a/webroot/index.html
+++ b/webroot/index.html
@@ -6,6 +6,7 @@ meta:
 link:
   text: Home
   url: index.html
+weight: 0
 ---
 <!--[if lt IE 8]>
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
