--- a/webroot/patients.html
+++ b/webroot/patients.html
@@ -4,6 +4,7 @@ layout: default
 link:
     text: Patients
     url: patients.html
+weight: 2
 ---
 <!--[if lt IE 8]>
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
