--- a/webroot/team.html
+++ b/webroot/team.html
@@ -4,6 +4,7 @@ layout: default
 link:
     text: Meet The Team
     url: team.html
+weight: 1
 ---
 <!--[if lt IE 8]>
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
