refactor contact to handle toggle between short and verbose

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -17,11 +17,11 @@ weight: 0
   <br>
   <hr>
   <br>
-  {% include organisms/contact-full.html %}
+  {% include organisms/contact.html additional=true %}
   <br>
   <hr>
   <br>
-  {% include organisms/contact-short.html %}
+  {% include organisms/contact.html %}
 
 
   <div class="main wrapper clearfix">
