--- a/webroot/index.html
+++ b/webroot/index.html
@@ -8,47 +8,46 @@ link:
   url: index.html
 weight: 0
 ---
-<!--[if lt IE 8]>
-<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-<![endif]-->
-
 <div class="main-container">
 
-  <br>
-  <hr>
-  <br>
-  {% include organisms/contact.html additional=true %}
-  <br>
-  <hr>
-  <br>
   {% include organisms/contact.html %}
 
+  <section class="about">
+    <div class="about__content container clearfix">
+      <div class="about__first-section">
+        <div class="row">
+          <div class="col-md-6 col-md-offset-3 col-xs-8 col-xs-offset-3">
+            <h5 class="about__lead-quote">We’ve been fortunate to help thousands of kids grow into fearless adult patients who enjoy visiting the dentist. We would be honored if you stopped by for a free office tour with your child, and give us an opportunity to earn your trust.</h5>
+            <p class="quoty">–Drs. Kirk Kollmann and Cissy Furusho</p>
+          </div>
+        </div>
+      </div>
+      <div class="about__second-section">
+        <div class="about__img">
+          <img src="" alt="">
+        </div>
+        <div class="row">
+          <div class="col-md-6 about__more">
+            <h3>What is a Pediatric Dentist?</h3>
+            <p>Pediatric dentists have an additional 2-3 years of training to learn how to deal with the behavioral
+              aspects of children, how to make them feel comfortable, and to make the experience pleasant in addition to
+              clinical techniques specific to children. <span class="font--highlight">We are especially trained and qualified to treat patients with
+              special needs.</span></p>
+            <a href="#">Read More</a>
+          </div>
+          <div class="col-md-6 about__more">
+            <h3>What Makes Dentistry for Kids Special?</h3>
+            <p>We make an extra effort to create an exciting environment which makes a big difference, especially in the
+              case of the very apprehensive family. <span class="font--highlight">By bringing your child to a pediatric dentist as early as age one
+              year</span>, you can ensure the timely prevention of dental disease and at the same time provide your child with
+              an upbeat experience that can last a lifetime.</p>
+            <a href="#">Read More</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
-  <div class="main wrapper clearfix">
+  {% include organisms/contact.html additional=true %}
 
-    <article>
-      <header>
-        <h1>article header h1</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec.</p>
-      </header>
-      <section>
-        <h2>article section h2</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Proin in est sed erat facilisis pharetra.</p>
-      </section>
-      <section>
-        <h2>article section h2</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Proin in est sed erat facilisis pharetra.</p>
-      </section>
-      <footer>
-        <h3>article footer h3</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor.</p>
-      </footer>
-    </article>
-
-    <aside>
-      <h3>aside</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices.</p>
-    </aside>
-
-  </div> <!-- #main -->
-</div> <!-- #main-container -->
+</div>
