--- a/webroot/index.html
+++ b/webroot/index.html
@@ -16,7 +16,7 @@ weight: 0
     <div class="about__content container clearfix">
       <div class="about__first-section">
         <div class="row">
-          <div class="col-md-6 col-md-offset-3 col-xs-8 col-xs-offset-3">
+          <div class="col-md-6 col-md-offset-3 col-xs-8 col-xs-offset-2">
             <h5 class="about__lead-quote">We’ve been fortunate to help thousands of kids grow into fearless adult patients who enjoy visiting the dentist. We would be honored if you stopped by for a free office tour with your child, and give us an opportunity to earn your trust.</h5>
             <p class="quoty">–Drs. Kirk Kollmann and Cissy Furusho</p>
           </div>
@@ -43,6 +43,44 @@ weight: 0
               an upbeat experience that can last a lifetime.</p>
             <a href="#">Read More</a>
           </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="specials">
+    <div class="specials__heading heading">
+      <h2>New Patient Specials</h2>
+      <h4>Offers end September 20, 2016</h4>
+    </div>
+    <div class="specials__content">
+      <div class="row">
+        <div class="specials__tile col-md-4 col-md-offset-2">
+          <h3>Children's New Patient&nbsp;Dental Exam</h3>
+          <h2>$75</h2>
+          <p>Save $57</p>
+          <p>Patients 12 and under receive a professional dental cleaning, fluoride treatment, needed x‑rays, and a
+            comprehensive exam.</p>
+          <p>(D0150, D0272)</p>
+        </div>
+        <div class="specials__tile col-md-4">
+          <h3>Children's Dental&nbsp;Cleaning and Fluoride</h3>
+          <h2>$45</h2>
+          <p>Save $52</p>
+          <p>Patients 12 and under receive a professional dental cleaning and topical varnish application. A new patient dental exam is required.</p>
+          <p>(D1120, D1208)</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="specials__tile col-md-4 col-md-offset-2">
+          <h2>FREE</h2>
+          <h3>Prenatal Consultation</h3>
+          <p>Expecting parents are encouraged to call us for a brief consultation regarding infant dental care and what to expect in the early years.</p>
+        </div>
+        <div class="specials__tile col-md-4">
+          <h2>FREE</h2>
+          <h3>Children Under Two</h3>
+          <p>Bring your child in before his or her second birthday for a free exam and oral hygiene instruction.</p>
         </div>
       </div>
     </div>
