add section skeleton for reviews

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -86,6 +86,16 @@ weight: 0
     </div>
   </section>
 
+  <section class="reviews">
+    <div class="reviews__heading">
+      <h2>See What Parents are Saying</h2>
+    </div>
+
+    <div class="reviews__main">
+      <h1>Review Carousel Here</h1>
+    </div>
+  </section>
+
   {% include organisms/contact.html additional=true %}
 
 </div>
