add content skeleton to team page

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -87,7 +87,7 @@ weight: 0
   </section>
 
   <section class="reviews">
-    <div class="reviews__heading">
+    <div class="reviews__heading heading">
       <h2>See What Parents are Saying</h2>
     </div>
 
