--- a/webroot/team.html
+++ b/webroot/team.html
@@ -6,36 +6,54 @@ link:
     url: team.html
 weight: 1
 ---
-<!--[if lt IE 8]>
-<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-<![endif]-->
-
 <div class="main-container">
-    <div class="main wrapper clearfix">
+    {% include organisms/contact.html %}
 
-        <article>
-            <header>
-                <h1>article header h1</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec.</p>
-            </header>
-            <section>
-                <h2>article section h2</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Proin in est sed erat facilisis pharetra.</p>
+    <section class="team">
+        <div class="heading team__heading">
+            <h2>Meet The Team</h2>
+            <div class="row furusho">
+                <div class="col-sm-2 furusho__image_">
+                    <img src="" alt="">
+                </div>
+                <div class="col-sm-10 furusho-bio">
+                    <h3>Cissy K. Furusho, DDS</h3>
+                    <p>Dr. Cissy K. Furusho received her B.S. in biology from the University of Illinois,
+                        Champaign-Urbana and graduated with her D.D.S., her pediatric certificate, and her masters in
+                        oral biology from UIC College of Dentistry. She holds a certificate in Orofacial Myofunctional
+                        Therapy. She is highly involved in the American Association of Women Dentist and is also very
+                        active as a member in the American Academy of Pediatric Dentistry, the American Dental
+                        Association and the Chicago Dental Society. Dr. Furusho is also a clinical instructor at the
+                        University of Illinois at Chicago, College of Dentistry. She enjoys riding her bicycle and loves
+                        to bake and spend time with her family. Dr. Furusho is very excited to be working with her
+                        pediatric dentist Dr. Berman and feels very fortunate to have found a wonderful partner in Dr.
+                        Kollmann. She looks forward to being an important part in your children's lives!</p>
+                </div>
+            </div>
+            <div class="row kollman">
+                <div class="col-sm-2 kollman__image_">
+                    <img src="" alt="">
+                </div>
+                <div class="col-sm-10 kollman-bio">
+                    <h3>Kirk B. Kollman, DMD</h3>
+                    <p>Dr. Kirk Kollmann graduated from the University of Florida College of Dentistry and received his
+                        pediatric dental degree from Children's Hospital of Michigan in Detroit. Keeping with his
+                        hospital background, he is a clinical instructor and volunteers his time working with the Cleft
+                        Palate - Craniofacial Team at Children's Memorial Hospital. Dr. Kollmann has taken extensive
+                        continuing education in the field of Orafacial Myofunctional Therapist by the Academy of
+                        Orofacial Myofunctional Therapy. He serves as a spokesperson for the Chicago Dental Society and
+                        is involved in various aspects of organized dentistry. He loves to be the do-it-yourself
+                        craftsman, being proficient in electricity, carpentry, woodworking, plumbing, etc. Computers and
+                        gadgets are another one of his hobbies. He holds great respect for his partner Dr. Furusho.</p>
+                </div>
+            </div>
+            <hr>
+            <h1>Certificate Logo Carousel Here</h1>
+            <section class="team-additional">
+                <h1>Team Carousel with Hover and Modal</h1>
             </section>
-            <section>
-                <h2>article section h2</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Proin in est sed erat facilisis pharetra.</p>
-            </section>
-            <footer>
-                <h3>article footer h3</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor.</p>
-            </footer>
-        </article>
+        </div>
+    </section>
 
-        <aside>
-            <h3>aside</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices.</p>
-        </aside>
-
-    </div> <!-- #main -->
-</div> <!-- #main-container -->
+    {% include organisms/contact.html additional=true %}
+</div>
