--- a/webroot/index.html
+++ b/webroot/index.html
@@ -55,7 +55,7 @@ weight: 0
     </div>
     <div class="specials__content">
       <div class="row">
-        <div class="specials__tile col-md-4 col-md-offset-2">
+        <div class="specials__tile col-sm-6 col-md-4 col-md-offset-2">
           <h3>Children's New Patient&nbsp;Dental Exam</h3>
           <h2>$75</h2>
           <p>Save $57</p>
@@ -63,7 +63,7 @@ weight: 0
             comprehensive exam.</p>
           <p>(D0150, D0272)</p>
         </div>
-        <div class="specials__tile col-md-4">
+        <div class="specials__tile col-sm-6 col-md-4">
           <h3>Children's Dental&nbsp;Cleaning and Fluoride</h3>
           <h2>$45</h2>
           <p>Save $52</p>
@@ -72,12 +72,12 @@ weight: 0
         </div>
       </div>
       <div class="row">
-        <div class="specials__tile col-md-4 col-md-offset-2">
+        <div class="specials__tile col-sm-6 col-md-4 col-md-offset-2">
           <h2>FREE</h2>
           <h3>Prenatal Consultation</h3>
           <p>Expecting parents are encouraged to call us for a brief consultation regarding infant dental care and what to expect in the early years.</p>
         </div>
-        <div class="specials__tile col-md-4">
+        <div class="specials__tile col-sm-6 col-md-4">
           <h2>FREE</h2>
           <h3>Children Under Two</h3>
           <p>Bring your child in before his or her second birthday for a free exam and oral hygiene instruction.</p>
