--- a/webroot/patients.html
+++ b/webroot/patients.html
@@ -6,36 +6,72 @@ link:
     url: patients.html
 weight: 2
 ---
-<!--[if lt IE 8]>
-<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-<![endif]-->
-
 <div class="main-container">
-    <div class="main wrapper clearfix">
+    {% include organisms/contact.html %}
 
-        <article>
-            <header>
-                <h1>article header h1</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec.</p>
-            </header>
-            <section>
-                <h2>article section h2</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Proin in est sed erat facilisis pharetra.</p>
-            </section>
-            <section>
-                <h2>article section h2</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Proin in est sed erat facilisis pharetra.</p>
-            </section>
-            <footer>
-                <h3>article footer h3</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor.</p>
-            </footer>
-        </article>
+    <section class="first-visit">
+        <div class="first-visit__content clearfix">
+            <div class="heading first-visit__heading">
+                <h2>The First Dental Visit</h2>
+            </div>
 
-        <aside>
-            <h3>aside</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices.</p>
-        </aside>
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="" alt="">
+                </div>
+                <div class="col-md-6">
+                    <p>For some children and parents, the first visit to the dentist can be a stressful situation.
+                        First, we establish trust between the child in an effort to set a positive tone for the rest of
+                        your child's life with their dentist. We meet with the child one-on-one so that the child may be
+                        introduced to the dentist and her team without the parent. While the parent may feel like their
+                        presence in the treatment area is comforting, actually the opposite is true. The child may feel
+                        like the parent is there to protect them from these “strangers” and cause undue discomfort and
+                        anxiety to the child.</p>
+                    <p>We then will implement the “show-tell-do” method to introduce the child to first things they know
+                        like a toothbrush, then to the other dental implements in a way that’s been proven to help them
+                        explore the process in a comfortable way. An open and honest dialogue helps the child to feel
+                        comfortable and know what to expect during any treatments. We never use sedative drugs or
+                        anesthesia as our goal is to have a well-adjusted child that is not afraid of the dentist. Even
+                        children on the spectrum or who may have disabilities can benefit from this nurturing learning
+                        atmosphere.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
-    </div> <!-- #main -->
-</div> <!-- #main-container -->
+    <section class="qa clearfix">
+        <div class="qa-content">
+            <div class="heading qa__heading">
+                <h2>Parent Questions & Answers</h2>
+            </div>
+
+            <h1>Accordian QA List goes here</h1>
+        </div>
+    </section>
+
+    <section class="comfort">
+        <div class="comfort__content clearfix">
+            <div class="heading comfort__heading">
+                <h2>Patient Comfort</h2>
+            </div>
+
+            <div class="col-md-6">
+                <img src="" alt="">
+            </div>
+            <div class="col-md-6">
+                <p>Our office was designed for infants, children and teens. From the arcade games in the waiting room to
+                    the life-sized wall art, kids feel right at home. It's a unique atmosphere that helps children relax
+                    and enjoy their experience. Children deserve to experience a gentle, caring approach to their dental
+                    care.</p>
+                <p>Our goal is to help your child grow into an adult who routinely and comfortably seeks dental care.
+                    This often requires extra time with your child, distraction through many of our child friendly
+                    amenities, or in some cases the use of appropriate sedatives. It is very important to discuss with
+                    one of our doctors any bad experiences or fears your child may have in order to provide the best
+                    possible care for your child.</p>
+            </div>
+        </div>
+    </section>
+
+    {% include organisms/contact.html additional=true %}
+
+</div>
