add content skeleton to frenectomy

--- a/webroot/frenectomy.html
+++ b/webroot/frenectomy.html
@@ -6,36 +6,44 @@ link:
     url: frenectomy.html
 weight: 4
 ---
-<!--[if lt IE 8]>
-<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-<![endif]-->
-
 <div class="main-container">
-    <div class="main wrapper clearfix">
+    {% include organisms/contact.html %}
 
-        <article>
-            <header>
-                <h1>article header h1</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec.</p>
-            </header>
-            <section>
-                <h2>article section h2</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Proin in est sed erat facilisis pharetra.</p>
-            </section>
-            <section>
-                <h2>article section h2</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Proin in est sed erat facilisis pharetra.</p>
-            </section>
-            <footer>
-                <h3>article footer h3</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor.</p>
-            </footer>
-        </article>
+    <section class="frenectomy">
+        <div class="frenectomy__wrapper container clearfix">
+            <div class="heading frenectomy__heading">
+                <h2>Infant Frenectomy</h2>
+            </div>
 
-        <aside>
-            <h3>aside</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices.</p>
-        </aside>
-
-    </div> <!-- #main -->
-</div> <!-- #main-container -->
+            <div class="frenectomy__content row">
+                <div class="col-sm-3"><img src="" alt="">
+                </div>
+                <div class="col-sm-9">
+                    <h4>What is a Lip Tie or Tongue Tie?</h4>
+                    <p>Well before your baby is born, you are committed to doing everything possible to help him or her
+                        grow up happy, strong and healthy. Sometimes, you both need extra help to accomplish this, and
+                        one common but easily treated problem some parents and infants face is a restrictive frenum.
+                        This is also called a frenulum and is commonly known as tongue-tie or lip-tie.</p>
+                    <p>A frenum is a stretch of tissue that connects and holds other tissues in place. The lingual
+                        frenum is the tissue under the tongue connecting the tongue to the floor of the mouth. The
+                        maxillary labial frenum is the tissue attaching the upper lip to the mouth.</p>
+                    <br>
+                    <h4>What is a Frenectomy?</h4>
+                    <p>For a newborn, lip-tie or tongue-tie can make breastfeeding difficult for the infant and painful
+                        for the mother because the lip and/or tongue's limited movement prevents the infant from
+                        properly latching on and drawing milk from the breast. If left untreated, it can eventually
+                        impair the child's speech and proper tooth alignment. The newborns we treat should nurse
+                        immediately and sometimes moms will notice a very significant difference both in the quantity
+                        that the newborn consumes as well as their personal comfort while nursing.</p>
+                    <p>Lip-tie and tongue-tie can be corrected by a procedure called frenectomy/ frenotomy. This can be
+                        performed with scissors or a soft tissue laser. It is a simple in office procedure which can be
+                        performed by Dr. Kollmann or Dr. Furusho.</p>
+                    <p>Together, we'll do everything possible to help your little one grow up happy, strong and
+                        healthy.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+    {% include organisms/contact.html additional=true %}
+</div>
