--- a/webroot/contact.html
+++ b/webroot/contact.html
@@ -14,18 +14,18 @@ weight: 5
             </div>
             
             <div class="row location__content">
-                <div class="col-md-4 col-sm-6">
+                <div class="col-md-4 col-sm-6 center">
                     <img src="" alt="">
                     <h6>4801 West Peterson, Suite 410 </h6>
                     <h6>Chicago, IL 60646</h6>
                 </div>
-                <div class="col-md-4 col-sm-6">
+                <div class="col-md-4 col-sm-6 center">
                     <h5>New Patient Hotline</h5>
                     <h3>{{ site.data.content.contact.phone-new }}</h3>
                     <h5>Existing Patient Hotline</h5>
                     <h3>{{ site.data.content.contact.phone-existing }}</h3>
                 </div>
-                <div class="col-md-4 col-sm-12">
+                <div class="col-md-4 col-sm-12 center">
                     <img src="" alt="">
                 </div>
             </div>
@@ -39,15 +39,21 @@ weight: 5
                 <h2>Contact Us</h2>
             </div>
 
-            <div class="contact-form__content">
-                <form action="" class="contact-form__form">
+            <div class="contact-form__content col-md-8 col-md-offset-2">
+                <form action="" class="contact-form__form center">
                     <p>Yes! Please contact me to schedule an appointment or answer any questions I might still have:</p>
-                    <label for="name">My name:</label>
-                    <input type="text" name="name" id="name" class="contact_form__input"/>
-                    <label for="email">Email:</label>
-                    <input type="text" name="email" id="email" class="contact_form__input"/>
-                    <label for="phone">Phone Number:</label>
-                    <input type="text" name="phone" id="phone" class="contact_form__input"/>
+                    <div class="form-row">
+                        <label for="name">My name:</label>
+                        <input type="text" name="name" id="name" class="contact_form__input"/>
+                    </div>
+                    <div class="form-row">
+                        <label for="email">Email:</label>
+                        <input type="text" name="email" id="email" class="contact_form__input"/>
+                    </div>
+                    <div class="form-row">
+                        <label for="phone">Phone Number:</label>
+                        <input type="text" name="phone" id="phone" class="contact_form__input"/>
+                    </div>
                     <a href="#" class="btn">Request Appointment</a>
                 </form>
             </div>
@@ -55,7 +61,7 @@ weight: 5
     </section>
 
     <section class="hipaa">
-        <div class="hipaa__wrapper container clearfix">
+        <div class="hipaa__wrapper container clearfix center">
             <p>This form, <strong>Notice of Privacy Practices</strong>, presents the information that federal law requires us to give our
                 patients regarding our privacy practices.</p>
             <a href="http://www.dentistry4kids.net/new-patient">HIPAA Notice</a>
