styling and layout including section headers and light purple background

--- a/webroot/contact.html
+++ b/webroot/contact.html
@@ -15,18 +15,18 @@ weight: 5
             
             <div class="row location__content">
                 <div class="col-md-4 col-sm-6 center">
-                    <img src="" alt="">
+                    <img src="images/horizontal-logo.png" alt="Denistry for Kids Logo">
                     <h6>4801 West Peterson, Suite 410 </h6>
                     <h6>Chicago, IL 60646</h6>
                 </div>
                 <div class="col-md-4 col-sm-6 center">
                     <h5>New Patient Hotline</h5>
-                    <h3>{{ site.data.content.contact.phone-new }}</h3>
+                    <h3 class="font-accent-purple">{{ site.data.content.contact.phone-new }}</h3>
                     <h5>Existing Patient Hotline</h5>
-                    <h3>{{ site.data.content.contact.phone-existing }}</h3>
+                    <h4 class="font-accent-purple">{{ site.data.content.contact.phone-existing }}</h4>
                 </div>
                 <div class="col-md-4 col-sm-12 center">
-                    <img src="" alt="">
+                    <img src="images/furusho-map.jpg" alt="map">
                 </div>
             </div>
         </div>
@@ -60,7 +60,7 @@ weight: 5
         </div>
     </section>
 
-    <section class="hipaa">
+    <section class="hipaa background-light-purple">
         <div class="hipaa__wrapper container clearfix center">
             <p>This form, <strong>Notice of Privacy Practices</strong>, presents the information that federal law requires us to give our
                 patients regarding our privacy practices.</p>
