--- a/webroot/frenectomy.html
+++ b/webroot/frenectomy.html
@@ -9,7 +9,7 @@ weight: 4
 <div class="main-container">
     {% include organisms/contact.html %}
 
-    <section class="frenectomy">
+    <section class="frenectomy background-light-purple">
         <div class="frenectomy__wrapper container clearfix">
             <div class="heading frenectomy__heading">
                 <h2>Infant Frenectomy</h2>
