--- a/webroot/index.html
+++ b/webroot/index.html
@@ -28,20 +28,20 @@ weight: 0
         </div>
         <div class="row">
           <div class="col-md-6 about__more">
-            <h3>What is a Pediatric Dentist?</h3>
+            <h3 class="font-accent-purple">What is a Pediatric Dentist?</h3>
             <p>Pediatric dentists have an additional 2-3 years of training to learn how to deal with the behavioral
               aspects of children, how to make them feel comfortable, and to make the experience pleasant in addition to
               clinical techniques specific to children. <span class="font--highlight">We are especially trained and qualified to treat patients with
               special needs.</span></p>
-            <a href="#">Read More</a>
+            <a class="font-accent-purple" href="#">Read More</a>
           </div>
           <div class="col-md-6 about__more">
-            <h3>What Makes Dentistry for Kids Special?</h3>
+            <h3 class="font-accent-purple">What Makes Dentistry for Kids Special?</h3>
             <p>We make an extra effort to create an exciting environment which makes a big difference, especially in the
               case of the very apprehensive family. <span class="font--highlight">By bringing your child to a pediatric dentist as early as age one
               year</span>, you can ensure the timely prevention of dental disease and at the same time provide your child with
               an upbeat experience that can last a lifetime.</p>
-            <a href="#">Read More</a>
+            <a class="font-accent-purple" href="#">Read More</a>
           </div>
         </div>
       </div>
@@ -56,16 +56,16 @@ weight: 0
     <div class="specials__content">
       <div class="row">
         <div class="specials__tile col-sm-6 col-md-4 col-md-offset-2">
-          <h3>Children's New Patient&nbsp;Dental Exam</h3>
-          <h2>$75</h2>
+          <h3 class="font-accent-purple">Children's New Patient&nbsp;Dental Exam</h3>
+          <h2 class="font-accent-purple">$75</h2>
           <p>Save $57</p>
           <p>Patients 12 and under receive a professional dental cleaning, fluoride treatment, needed x‑rays, and a
             comprehensive exam.</p>
           <p>(D0150, D0272)</p>
         </div>
         <div class="specials__tile col-sm-6 col-md-4">
-          <h3>Children's Dental&nbsp;Cleaning and Fluoride</h3>
-          <h2>$45</h2>
+          <h3 class="font-accent-purple">Children's Dental&nbsp;Cleaning and Fluoride</h3>
+          <h2 class="font-accent-purple">$45</h2>
           <p>Save $52</p>
           <p>Patients 12 and under receive a professional dental cleaning and topical varnish application. A new patient dental exam is required.</p>
           <p>(D1120, D1208)</p>
@@ -73,13 +73,13 @@ weight: 0
       </div>
       <div class="row">
         <div class="specials__tile col-sm-6 col-md-4 col-md-offset-2">
-          <h2>FREE</h2>
-          <h3>Prenatal Consultation</h3>
+          <h2 class="font-accent-purple">FREE</h2>
+          <h3 class="font-accent-purple">Prenatal Consultation</h3>
           <p>Expecting parents are encouraged to call us for a brief consultation regarding infant dental care and what to expect in the early years.</p>
         </div>
         <div class="specials__tile col-sm-6 col-md-4">
-          <h2>FREE</h2>
-          <h3>Children Under Two</h3>
+          <h2 class="font-accent-purple">FREE</h2>
+          <h3 class="font-accent-purple">Children Under Two</h3>
           <p>Bring your child in before his or her second birthday for a free exam and oral hygiene instruction.</p>
         </div>
       </div>
@@ -87,7 +87,7 @@ weight: 0
   </section>
 
   <section class="reviews">
-    <div class="reviews__heading heading">
+    <div class="reviews__heading heading background-light-purple">
       <h2>See What Parents are Saying</h2>
     </div>
 
