add images for services

--- a/webroot/services.html
+++ b/webroot/services.html
@@ -17,36 +17,38 @@ weight: 3
             </div>
 
             <div class="row">
-                <div class="col-sm-4 services__tile"><img src="" alt="">
-                    <h6>title1</h6>
+                <div class="center col-sm-4 services__tile"><img class="services__image" src="images/services/frenectomy.jpg" alt="">
+                    <h6>Infant Frenectomy</h6>
                 </div>
-                <div class="col-sm-4 services__tile"><img src="" alt="">
-                    <h6>title2</h6>
+                <div class="center col-sm-4 services__tile"><img class="services__image" src="images/services/fillings.jpg" alt="">
+                    <h6>Fillings</h6>
                 </div>
-                <div class="col-sm-4 services__tile"><img src="" alt="">
-                    <h6>title3</h6>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-4 services__tile"><img src="" alt="">
-                    <h6>title1</h6>
-                </div>
-                <div class="col-sm-4 services__tile"><img src="" alt="">
-                    <h6>title2</h6>
-                </div>
-                <div class="col-sm-4 services__tile"><img src="" alt="">
-                    <h6>title3</h6>
+                <div class="center col-sm-4 services__tile"><img class="services__image" src="images/services/crowns.jpg" alt="">
+                    <h6>Crowns</h6>
                 </div>
             </div>
+            <hr>
             <div class="row">
-                <div class="col-sm-4 services__tile"><img src="" alt="">
-                    <h6>title1</h6>
+                <div class="center col-sm-4 services__tile"><img class="services__image" src="images/services/space-maintainers.jpg" alt="">
+                    <h6>Space Maintainers</h6>
                 </div>
-                <div class="col-sm-4 services__tile"><img src="" alt="">
-                    <h6>title2</h6>
+                <div class="center col-sm-4 services__tile"><img class="services__image" src="images/services/mouth-guards.jpg" alt="">
+                    <h6>Mouth Guards</h6>
                 </div>
-                <div class="col-sm-4 services__tile"><img src="" alt="">
-                    <h6>title3</h6>
+                <div class="center col-sm-4 services__tile"><img class="services__image" src="images/services/pulpotomy.jpg" alt="">
+                    <h6>Pulpotomy (Baby Root Canal)</h6>
+                </div>
+            </div>
+            <hr>
+            <div class="row">
+                <div class="center col-sm-4 services__tile"><img class="services__image" src="images/services/child-orthodontics.jpg" alt="">
+                    <h6>Orthodontic Treatment</h6>
+                </div>
+                <div class="center col-sm-4 services__tile"><img class="services__image" src="images/services/sealants.jpg" alt="">
+                    <h6>Sealants</h6>
+                </div>
+                <div class="center col-sm-4 services__tile"><img class="services__image" src="images/services/digital-xrays.jpg" alt="">
+                    <h6>Digital x-Rays</h6>
                 </div>
             </div>
         </div>
