site wide styling

--- a/webroot/contact.html
+++ b/webroot/contact.html
@@ -7,7 +7,7 @@ link:
 weight: 5
 ---
 <div class="main-container">
-    <section class="location">
+    <section class="location section-margins">
         <div class="location__wrapper container clearfix">
             <div class="heading location__heading">
                 <h2>Our Location</h2>
@@ -32,25 +32,25 @@ weight: 5
         </div>
     </section>
 
-    <section class="contact-form">
+    <section class="contact-form section-margins background-light-green">
         <div class="contact-form__wrapper container clearfix">
 
             <div class="heading contact-form__heading">
                 <h2>Contact Us</h2>
             </div>
 
-            <div class="contact-form__content col-md-8 col-md-offset-2">
+            <div class="contact-form__content col-md-10 col-md-offset-1">
                 <form action="" class="contact-form__form center">
                     <p>Yes! Please contact me to schedule an appointment or answer any questions I might still have:</p>
-                    <div class="form-row">
+                    <div class="contact_form__row">
                         <label for="name">My name:</label>
                         <input type="text" name="name" id="name" class="contact_form__input"/>
                     </div>
-                    <div class="form-row">
+                    <div class="contact_form__row">
                         <label for="email">Email:</label>
                         <input type="text" name="email" id="email" class="contact_form__input"/>
                     </div>
-                    <div class="form-row">
+                    <div class="contact_form__row">
                         <label for="phone">Phone Number:</label>
                         <input type="text" name="phone" id="phone" class="contact_form__input"/>
                     </div>
@@ -60,11 +60,11 @@ weight: 5
         </div>
     </section>
 
-    <section class="hipaa background-light-purple">
+    <section class="hipaa background-light-purple section-margins">
         <div class="hipaa__wrapper container clearfix center">
             <p>This form, <strong>Notice of Privacy Practices</strong>, presents the information that federal law requires us to give our
                 patients regarding our privacy practices.</p>
-            <a href="http://www.dentistry4kids.net/new-patient">HIPAA Notice</a>
+            <a href="#">HIPAA Notice</a>
         </div>
     </section>
 </div>
