--- a/webroot/frenectomy.html
+++ b/webroot/frenectomy.html
@@ -9,14 +9,14 @@ weight: 4
 <div class="main-container">
     {% include organisms/contact.html %}
 
-    <section class="frenectomy background-light-purple">
+    <section class="frenectomy background-light-purple section-margins">
         <div class="frenectomy__wrapper container clearfix">
             <div class="heading frenectomy__heading">
                 <h2>Infant Frenectomy</h2>
             </div>
 
             <div class="frenectomy__content row">
-                <div class="col-sm-3"><img src="" alt="">
+                <div class="col-sm-3"><img src="images/frenectomy-photo.jpg" alt="frenectomy">
                 </div>
                 <div class="col-sm-9">
                     <h4>What is a Lip Tie or Tongue Tie?</h4>
