--- a/webroot/services.html
+++ b/webroot/services.html
@@ -10,7 +10,7 @@ weight: 3
 
     {% include organisms/contact.html %}
 
-    <section class="services">
+    <section class="services section-margins">
         <div class="services__content clearfix">
             <div class="heading services__heading">
                 <h2>Pediatric Services</h2>
