--- a/webroot/team.html
+++ b/webroot/team.html
@@ -9,30 +9,32 @@ weight: 1
 <div class="main-container">
     {% include organisms/contact.html %}
 
-    <section class="team">
+    <section class="team section-margins">
         <div class="team_wrapper clearfix">
 
             <div class="heading team__heading background-light-purple">
                 <h2>Meet The Team</h2>
             </div>
 
-            <div class="container background-light-purple">
-                <div class="row furusho">
-                    <div class="col-sm-3 furusho__image_">
-                        <img src="images/bios/furusho-bio.jpg" alt="">
-                    </div>
-                    <div class="col-sm-9 furusho-bio">
-                        <h3>Cissy K. Furusho, DDS</h3>
-                        <p>Dr. Cissy K. Furusho received her B.S. in biology from the University of Illinois,
-                            Champaign-Urbana and graduated with her D.D.S., her pediatric certificate, and her masters in
-                            oral biology from UIC College of Dentistry. She holds a certificate in Orofacial Myofunctional
-                            Therapy. She is highly involved in the American Association of Women Dentist and is also very
-                            active as a member in the American Academy of Pediatric Dentistry, the American Dental
-                            Association and the Chicago Dental Society. Dr. Furusho is also a clinical instructor at the
-                            University of Illinois at Chicago, College of Dentistry. She enjoys riding her bicycle and loves
-                            to bake and spend time with her family. Dr. Furusho is very excited to be working with her
-                            pediatric dentist Dr. Berman and feels very fortunate to have found a wonderful partner in Dr.
-                            Kollmann. She looks forward to being an important part in your children's lives!</p>
+            <div class="background-light-purple">
+                <div class="container">
+                    <div class="row furusho">
+                        <div class="col-sm-3 furusho__image_">
+                            <img src="images/bios/furusho-bio.jpg" alt="">
+                        </div>
+                        <div class="col-sm-9 furusho-bio">
+                            <h3>Cissy K. Furusho, DDS</h3>
+                            <p>Dr. Cissy K. Furusho received her B.S. in biology from the University of Illinois,
+                                Champaign-Urbana and graduated with her D.D.S., her pediatric certificate, and her masters in
+                                oral biology from UIC College of Dentistry. She holds a certificate in Orofacial Myofunctional
+                                Therapy. She is highly involved in the American Association of Women Dentist and is also very
+                                active as a member in the American Academy of Pediatric Dentistry, the American Dental
+                                Association and the Chicago Dental Society. Dr. Furusho is also a clinical instructor at the
+                                University of Illinois at Chicago, College of Dentistry. She enjoys riding her bicycle and loves
+                                to bake and spend time with her family. Dr. Furusho is very excited to be working with her
+                                pediatric dentist Dr. Berman and feels very fortunate to have found a wonderful partner in Dr.
+                                Kollmann. She looks forward to being an important part in your children's lives!</p>
+                        </div>
                     </div>
                 </div>
             </div>
