--- a/webroot/patients.html
+++ b/webroot/patients.html
@@ -9,7 +9,7 @@ weight: 2
 <div class="main-container">
     {% include organisms/contact.html %}
 
-    <section class="first-visit background-light-purple">
+    <section class="first-visit background-light-purple section-margins">
         <div class="first-visit__content clearfix">
             <div class="heading first-visit__heading">
                 <h2>The First Dental Visit</h2>
@@ -39,7 +39,7 @@ weight: 2
         </div>
     </section>
 
-    <section class="qa clearfix">
+    <section class="qa clearfix section-margins">
         <div class="qa-content">
             <div class="heading qa__heading">
                 <h2>Parent Questions & Answers</h2>
@@ -49,7 +49,7 @@ weight: 2
         </div>
     </section>
 
-    <section class="comfort background-light-purple">
+    <section class="comfort background-light-purple section-margins">
         <div class="comfort__content clearfix">
             <div class="heading comfort__heading">
                 <h2>Patient Comfort</h2>
