--- a/webroot/index.html
+++ b/webroot/index.html
@@ -10,6 +10,22 @@ weight: 0
 ---
 <div class="main-container">
 
+  <section class="marquee">
+    <div class="marquee_wrapper clearfix">
+      <div class="marquee__slick">
+        <div class="marquee__slide">
+          <img src="" alt="">
+        </div>
+        <div class="marquee__slide">
+
+        </div>
+        <div class="marquee__slide">
+
+        </div>
+      </div>
+    </div>
+  </section>
+
   {% include organisms/contact.html %}
 
   <section class="about">
