add font awesome icons

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -13,14 +13,34 @@ weight: 0
   <section class="marquee">
     <div class="marquee_wrapper clearfix">
       <div class="marquee__slick">
-        <div class="marquee__slide">
-          <img src="" alt="">
+        <div class="marquee__slide" style="background-image: url('images/slide1.jpg');">
+          <div class="marquee__slide-wrapper">
+            <div class="slide--text-left container">
+              <h1>Creating happy healthy smiles</h1>
+              <h1>one child at a time</h1>
+              <h2>Now Welcoming</h2>
+              <h2>New Patients</h2>
+              <a href="" class="btn btn--inverted">New Patient Offers</a>
+            </div>
+          </div>
         </div>
-        <div class="marquee__slide">
-
-        </div>
-        <div class="marquee__slide">
-
+        <div class="marquee__slide" style="background-image: url('images/slide3.jpg');">
+          <div class="marquee__slide-wrapper">
+            <div class="container">
+              <div class="col-md-5 col sm-6">
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <div class="marquee__quote">
+                  <h3>“My three kids love them. Great team, very organized operation and state of the art technology is a
+                    recipe for success. Lastly and definitely not the least, they simply work great with KIDS!” </h3>
+                  <h3>–Ron N.</h3>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
