style font awesome icons

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -28,15 +28,16 @@ weight: 0
           <div class="marquee__slide-wrapper">
             <div class="container">
               <div class="col-md-5 col sm-6">
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star fa-star--custom" aria-hidden="true"></i>
+                <i class="fa fa-star fa-star--custom" aria-hidden="true"></i>
+                <i class="fa fa-star fa-star--custom" aria-hidden="true"></i>
+                <i class="fa fa-star fa-star--custom" aria-hidden="true"></i>
+                <i class="fa fa-star fa-star--custom" aria-hidden="true"></i>
                 <div class="marquee__quote">
                   <h3>“My three kids love them. Great team, very organized operation and state of the art technology is a
                     recipe for success. Lastly and definitely not the least, they simply work great with KIDS!” </h3>
                   <h3>–Ron N.</h3>
+                <a href="" class="btn btn--inverted">Read Our Reviews</a>
                 </div>
               </div>
             </div>
