--- a/webroot/patients.html
+++ b/webroot/patients.html
@@ -7,6 +7,37 @@ link:
 weight: 2
 ---
 <div class="main-container">
+
+    <section class="marquee">
+        <div class="marquee_wrapper clearfix">
+            <div class="marquee__slick">
+                <div class="marquee__slide" style="background-image: url('images/tour/tour1.jpg');">
+                    <div class="marquee__slide-wrapper">
+                        <div class="slide--text-center container center">
+                            <h1>Scheduling Your First Appointment is Easy!</h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="marquee__slide" style="background-image: url('images/tour/tour2.jpg');">
+                    <div class="marquee__slide-wrapper">
+                        <div class="slide--text-center container">
+                            <h1>Scheduling Your First</h1>
+                            <h1>Appointment is Easy!</h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="marquee__slide" style="background-image: url('images/tour/tour3.jpg');">
+                    <div class="marquee__slide-wrapper">
+                        <div class="slide--text-center container">
+                            <h1>Scheduling Your First</h1>
+                            <h1>Appointment is Easy!</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     {% include organisms/contact.html %}
 
     <section class="first-visit background-light-purple section-margins">
