add simple marquees and first page container

--- a/webroot/contact.html
+++ b/webroot/contact.html
@@ -6,7 +6,14 @@ link:
     url: contact.html
 weight: 5
 ---
-<div class="main-container">
+<div class="main-container container">
+
+    <section class="marquee" style="background-image: url('images/services-masthead.jpg');">
+        <div class="marquee__wrapper">
+
+        </div>
+    </section>
+
     <section class="location section-margins">
         <div class="location__wrapper container clearfix">
             <div class="heading location__heading">
