--- a/webroot/patients.html
+++ b/webroot/patients.html
@@ -20,17 +20,15 @@ weight: 2
                 </div>
                 <div class="marquee__slide" style="background-image: url('images/tour/tour2.jpg');">
                     <div class="marquee__slide-wrapper">
-                        <div class="slide--text-center container">
-                            <h1>Scheduling Your First</h1>
-                            <h1>Appointment is Easy!</h1>
+                        <div class="slide--text-center container center">
+                            <h1>Scheduling Your First Appointment is Easy!</h1>
                         </div>
                     </div>
                 </div>
                 <div class="marquee__slide" style="background-image: url('images/tour/tour3.jpg');">
                     <div class="marquee__slide-wrapper">
-                        <div class="slide--text-center container">
-                            <h1>Scheduling Your First</h1>
-                            <h1>Appointment is Easy!</h1>
+                        <div class="slide--text-center container center">
+                            <h1>Scheduling Your First Appointment is Easy!</h1>
                         </div>
                     </div>
                 </div>
