--- a/webroot/services.html
+++ b/webroot/services.html
@@ -8,6 +8,12 @@ weight: 3
 ---
 <div class="main-container">
 
+    <section class="marquee" style="background-image: url('images/services-masthead.jpg');">
+        <div class="marquee__wrapper">
+
+        </div>
+    </section>
+
     {% include organisms/contact.html %}
 
     <section class="services section-margins">
