--- a/webroot/team.html
+++ b/webroot/team.html
@@ -7,6 +7,13 @@ link:
 weight: 1
 ---
 <div class="main-container">
+
+    <section class="marquee" style="background-image: url('images/drs-slide.jpg');">
+        <div class="marquee__wrapper">
+
+        </div>
+    </section>
+
     {% include organisms/contact.html %}
 
     <section class="team section-margins">
