--- a/webroot/frenectomy.html
+++ b/webroot/frenectomy.html
@@ -7,6 +7,13 @@ link:
 weight: 4
 ---
 <div class="main-container">
+
+    <section class="marquee" style="background-image: url('images/frenectomy-slide.jpg');">
+        <div class="marquee__wrapper">
+
+        </div>
+    </section>
+
     {% include organisms/contact.html %}
 
     <section class="frenectomy background-light-purple section-margins">
