--- a/webroot/index.html
+++ b/webroot/index.html
@@ -8,7 +8,7 @@ link:
   url: index.html
 weight: 0
 ---
-<div class="main-container">
+<div class="main-container container">
 
   <section class="marquee">
     <div class="marquee_wrapper clearfix">
