--- a/webroot/patients.html
+++ b/webroot/patients.html
@@ -6,7 +6,7 @@ link:
     url: patients.html
 weight: 2
 ---
-<div class="main-container">
+<div class="main-container container">
 
     <section class="marquee">
         <div class="marquee_wrapper clearfix">
