--- a/webroot/services.html
+++ b/webroot/services.html
@@ -6,7 +6,7 @@ link:
     url: services.html
 weight: 3
 ---
-<div class="main-container">
+<div class="main-container container">
 
     <section class="marquee" style="background-image: url('images/services-masthead.jpg');">
         <div class="marquee__wrapper">
