--- a/webroot/team.html
+++ b/webroot/team.html
@@ -6,7 +6,7 @@ link:
     url: team.html
 weight: 1
 ---
-<div class="main-container">
+<div class="main-container container">
 
     <section class="marquee" style="background-image: url('images/drs-slide.jpg');">
         <div class="marquee__wrapper">
