add smaller section heading styling

--- a/html/index.html
+++ b/html/index.html
@@ -86,7 +86,7 @@ weight: 0
   </section>
 
   <section class="specials">
-    <div class="specials__heading heading">
+    <div class="specials__heading heading heading--small">
       <h2>New Patient Specials</h2>
       <h4>Offers end September 20, 2016</h4>
     </div>
@@ -124,7 +124,7 @@ weight: 0
   </section>
 
   <section class="reviews">
-    <div class="reviews__heading heading background-light-purple">
+    <div class="reviews__heading heading heading--small background-light-purple">
       <h2>See What Parents are Saying</h2>
     </div>
 
