--- a/html/team.html
+++ b/html/team.html
@@ -65,9 +65,59 @@ weight: 1
                 </div>
             </div>
             <hr>
-            <h1>Certificate Logo Carousel Here</h1>
+            <section class="associations">
+                <div class="slide">
+                   <div class="image-pad"><img src="images/associations/aapd.png" alt="aapd"/></div>
+                    <div class="image-pad"><img src="images/associations/acd.png" alt="acd"/></div>
+                    <div class="image-pad"><img src="images/associations/abpd.png" alt="abpd"/></div>
+                </div>
+                <div class="slide">
+                    <div class="image-pad"><img src="images/associations/ada.png" alt="ada"/></div>
+                    <div class="image-pad"><img src="images/associations/ald.png" alt="ald"/></div>
+                    <div class="image-pad"><img src="images/associations/cds.png" alt="cds"/></div>
+                    <div class="image-pad"><img src="images/associations/iatp.png" alt="iatp"/></div>
+                </div>
+                <div class="slide">
+                    <div class="image-pad"><img src="images/associations/aap.png" alt="aap"/></div>
+
+                    <div class="image-pad"><img src="images/associations/ilca.png" alt="ilca"/></div>
+                    <div class="image-pad"><img src="images/associations/isds.png" alt="isds"/></div>
+                </div>
+            </section>
             <section class="team-additional background-light-purple">
-                <h1>Team Carousel with Hover and Modal</h1>
+                <div class="team-slider">
+                    <div class="team-member"><img src="images/bios/adam-bio.jpg" alt="adam"><a href="#" data-toggle="modal" data-target="adam">Adam</a></div>
+                    <div class="team-member"><img src="images/bios/berman-bio.jpg" alt="berman"><a href="#"
+                                                                                               data-toggle="modal"
+                                                                                               data-target="berman">Berman</a>
+                    </div>
+                    <div class="team-member"><img src="images/bios/cassidy-bio.jpg" alt="cassidy"><a href="#"
+                                                                                               data-toggle="modal"
+                                                                                               data-target="cassidy">Cassidy Johnson</a>
+                    </div>
+                    <div class="team-member"><img src="images/bios/deneaqua-bio.jpg" alt="deneaqua"><a href="#"
+                                                                                               data-toggle="modal"
+                                                                                               data-target="deneaqua">Deneaqua Brown</a>
+                    </div>
+                    <div class="team-member"><img src="images/bios/letticia-bio.jpg" alt="letticia"><a href="#"
+                                                                                               data-toggle="modal"
+                                                                                               data-target="letticia">Letticia</a>
+                    </div>
+                    <div class="team-member"><img src="images/bios/marisela.jpg" alt="marisela"><a href="#"
+                                                                                               data-toggle="modal"
+                                                                                               data-target="marisela">Marisela Paz</a>
+                    </div>
+                    <div class="team-member"><img src="images/bios/michael-bio.jpg" alt="michael"><a href="#"
+                                                                                               data-toggle="modal"
+                                                                                               data-target="michael">Michael</a>
+                    </div>
+                    <div class="team-member"><img src="images/bios/tanisha-bio.jpg" alt="tanisha"><a href="#"
+                                                                                               data-toggle="modal"
+                                                                                               data-target="tanisha">Tanisha</a>
+                    </div>
+                </div>
+
+
             </section>
 
         </div>
